Spacing fixes, API guide fix

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1487,3 +1487,10 @@ button.steel:active, .steel button:active {
   background-color: #1f1f1f;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow for the bounding box effect */
 }
+
+button.center-btn, .center-btn button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
